--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
   scroll-snap-stop: normal;
 }
 
